[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vtuber-flow-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "streamlit==1.52.2",
  "pandas==2.3.3",
  "duckdb==1.4.3",
  "plotly==6.5.0",
  "numpy==2.4.0",
  "scikit-learn==1.8.0",
  "requests==2.32.5",
  "pyarrow==22.0.0",
  "matplotlib==3.10.8",
]

[tool.setuptools]
packages = []

[tool.uv]
package = false
